refreshing disable-interaction layer on resize window, fixing z-index issue of disable internaction

--- a/introjs.css
+++ b/introjs.css
@@ -71,7 +71,7 @@ tr.introjs-showElement > th {
   box-sizing: content-box;
   position: absolute;
   visibility: hidden;
-  z-index: 10000000;
+  z-index: 100000000;
   background-color: transparent;
   -webkit-transition: all 0.3s ease-out;
      -moz-transition: all 0.3s ease-out;
